# drone-vio-system

./: .gitignore  README.md  dashboard.py  debug_imu_slam3_kinh_nghiem.md  detect_axes.py  fix_matrix.py  mahony_node.py  mahony_viz.py  orb_slam3_config.yaml  run_mono_only.sh  run_slam3.sh  run_vio.sh  test_imu.py  test_sync.py
.github/workflows/: ci.yml  release.yml
drone_core/: CMakeLists.txt  compile_commands.json  package.xml
drone_core/include/drone_core/common/: ring_buffer.h  types.h
drone_core/include/drone_core/drivers/: camera_driver.h  imu_driver.h
drone_core/scripts/: build.sh  dashboard.sh  run.sh
drone_core/src/: main.cpp
drone_core/src/drivers/: camera_driver.cpp  imu_driver.cpp
drone_core/tools/: calibrate_extrinsics.py  dashboard.py  realtime_direction.py
firmware/stm32_icm_imu/: .cproject  .mxproject  .project  stm32_icm_imu.ioc  stm32_icm_imu.launch
firmware/stm32_icm_imu/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/stm32_icm_imu/Core/Src/: gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c
firmware/stm32_icm_imu/Debug/: makefile  objects.list  sources.mk  stm32_icm_imu.elf  stm32_icm_imu.list  stm32_icm_imu.map
firmware/stm32_icm_imu/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_it.cyclo  subdir.mk
firmware/stm32_icm_imu/Debug/Core/Startup/: subdir.mk
firmware/stm32_icm_imu/USB_DEVICE/App/: usbd_cdc_if.c
src/ORB_SLAM3/src/: LocalMapping.cc  Tracking.cc
src/ORB_SLAM3_ROS2/: CMakeLists.txt
src/ORB_SLAM3_ROS2/src/mono-inertial/: mono-inertial-node.cpp  mono-inertial-node.hpp  mono-inertial.cpp
src/ORB_SLAM3_ROS2/src/monocular/: monocular-slam-node.cpp  monocular-slam-node.hpp
(+6 files in other folders)
